--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".CourseRegist"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterCourse"
+            android:exported="false" />
+        <activity
             android:name=".LearnActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
